<resources>
    <string name="app_name">MemoryPop</string>
    <string name="reveal_definition">\?</string>
    <string name="next_word">Next Word</string>
    <string name="ok">OK</string>
    <string name="auth_failed">Login failed.</string>
    <string name="auth_succeeded">Login success.</string>
    <string name="new_word">+</string>
    <string name="submit">Submit</string>
    <string name="hint_word">New Word</string>
    <string name="hint_definition">Definition</string>
    <string name="edit">Edit</string>
    <string name="cancel">Cancel</string>
    <string name="title_activity_signin_or_up">SigninOrUpActivity</string>
    <string name="login">Login</string>
    <string name="email_address">Email Address</string>
    <string name="password">Password</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_new_entry">NewEntry</string>
</resources>
