<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_new_entry"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="de.jjff.flooose.memorypop.NewEntryActivity">

    <LinearLayout
        android:id="@+id/startLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/new_word_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="36dp"
            android:src="@drawable/new_entry" />

        <ImageView
            android:id="@+id/play_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/play" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/playLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:visibility="visible">

        <TextView
            android:id="@+id/entry_word"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="etwas nicht entgehen lassen"/>

        <TextView
            android:id="@+id/entry_definition"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/reveal_definition"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="toggleDefinition"
            android:text="@string/reveal_definition" />

        <Button
            android:id="@+id/ok"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="nextWord"
            android:text="@string/next_word" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/newWordLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:visibility="gone">

        <EditText
            android:id="@+id/newWord"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_word"
            android:imeOptions="actionNext"
            android:inputType="text"
            android:maxLines="1" />

        <EditText
            android:id="@+id/newWordDefinition"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_definition"
            android:imeOptions="actionDone"
            android:inputType="text"
            android:maxLines="1" />

        <Button
            android:id="@+id/submitNewWord"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="submitNewWord"
            android:text="@string/submit" />
    </LinearLayout>
</LinearLayout>
