<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_play"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="de.jjff.flooose.memorypop.PlayActivity">

    <LinearLayout
        android:id="@+id/playLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:orientation="vertical"
        android:visibility="visible">

        <TextView
            android:id="@+id/entry_word"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="serif"
            android:text="etwas nicht entgehen lassen"
            android:textSize="36dp"
            android:textStyle="italic" />

        <TextView
            android:id="@+id/entry_definition"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/play_activity_reveal_definition"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/reveal_definition" />

            <Button
                android:id="@+id/ok"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/next_word" />

            <Button
                android:id="@+id/editEntry"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/edit" />
        </LinearLayout>

    </LinearLayout>

</RelativeLayout>
